Añadimos contenido y detalles

--- a/html/detalles.html
+++ b/html/detalles.html
@@ -56,8 +56,9 @@
                 <!-- Formulario de búsqueda -->
                 <form action="#" method="get" class="flex items-center space-x-2">
                     <input type="text" name="query" placeholder="Buscar..."
-                        class="px-1/2 py-1 rounded-lg focus:outline-none focus:ring focus:border-customLightBlue lg:mb-0 text-sm">
-                    <button type="submit"
+                        class="px-1/2 py-1 rounded-lg focus:outline-none focus:ring focus:border-customLightBlue lg:mb-0 text-sm"
+                        title="Película por defecto: Frozen">
+                    <button type="submit" formaction="detalles.html#frozen"
                         class="bg-customLightBlue hover:bg-customBlue text-customWhite px-2 py-1 mr-2 rounded-lg">Buscar</button>
                 </form>
 
@@ -82,7 +83,11 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Titanic</h2>
+                    <h2 class="text-3xl font-semibold mb-2">Titanic
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">Jack es un joven artista que gana un pasaje para viajar a América en el
                         Titanic, el transatlántico más grande y seguro jamás construido. A bordo del buque conoce a
                         Rose, una chica de clase alta que viaja con su madre y su prometido Cal, un millonario engreído
@@ -90,6 +95,7 @@
                         Mientras, el lujoso transatlántico se acerca a un inmenso iceberg.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> James Cameron</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 1997</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Drama </p>
                 </div>
             </article>
 
@@ -99,12 +105,17 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Avatar</h2>
+                    <h2 class="text-3xl font-semibold mb-2">Avatar
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">Entramos en el mundo Avatar de la mano de Jake Sully, un ex-Marine en
                         silla de ruedas, que ha sido reclutado para viajar a Pandora, donde existe un mineral raro y muy
                         preciado que puede solucionar la crisis energética existente en la Tierra.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> James Cameron</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2009</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Animación </p>
                 </div>
             </article>
 
@@ -114,12 +125,17 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Los vengadores</h2>
+                    <h2 class="text-3xl font-semibold mb-2">Los vengadores
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">El poderoso Thanos, decidido a hacerse con las Gemas del Infinito para
                         controlar el universo, ataca la nave en la que huyen los supervivientes de Asgard. Su intención
                         es hacerse con la segunda de las gemas, ahora en manos de Loki.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> Anthony Russo; Joe Russor</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2018</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Acción </p>
                 </div>
             </article>
 
@@ -129,13 +145,18 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Frozen</h2>
+                    <h2 class="text-3xl font-semibold mb-2"> Frozen
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">Una profecía condena al reino de Arandelle a vivir en un invierno eterno.
                         La joven Anna, el temerario montañero Kristoff y el reno Sven deben emprender un viaje épico y
                         lleno de aventuras en busca de Elsa, la hermana de Anna y Reina de las Nieves. Ella es la única
                         que puede poner fin al gélido hechizo.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> Jennifer Lee, Chris Buck</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2013</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Animación </p>
                 </div>
             </article>
 
@@ -145,7 +166,11 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Rendel</h2>
+                    <h2 class="text-3xl font-semibold mb-2">Rendel
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">Una profecía condena al reino de Arandelle a vivir en un invierno eterno.
                         La venganza engendra venganza.
 
@@ -153,6 +178,7 @@
                         criminal responsable de la muerte de su familia..</p>
                     <p class="customDark mb-1"><strong>Director:</strong> Jesse Haaja</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2017</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Acción </p>
                 </div>
             </article>
 
@@ -162,12 +188,17 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Culpa mía</h2>
+                    <h2 class="text-3xl font-semibold mb-2">Culpa mía
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">La joven Noah deja todo para mudarse a la mansión de William Leister, el
                         flamante y rico marido de su madre Rafaela. Allí conoce a Nick, su nuevo hermanastro. Ella no
                         tarda en descubrir que, tras la imagen de hijo modelo, Nick oculta algo.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> Domingo González</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2023</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Drama </p>
                 </div>
             </article>
 
@@ -177,12 +208,17 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Spiderman: Homecoming</h2>
+                    <h2 class="text-3xl font-semibold mb-2">Spiderman: 
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">Peter Parker asume su nueva identidad como Spiderman y regresa a vivir
                         con su tía después de su aventura con los Vengadores. Al volver descubre que ha surgido un nuevo
                         y despiadado enemigo que pretende destruir todo lo que ama: el Buitre.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> Jon Watts</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2017</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Animación </p>
                 </div>
             </article>
 
@@ -193,12 +229,17 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Sin malos rollos</h2>
+                    <h2 class="text-3xl font-semibold mb-2">Sin malos rollos
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">Maddie, una mujer de 32 años en bancarrota, acepta la propuesta de los
                         padres del joven Percy, quienes le ofrecen un coche de lujo a cambio de fingir atracción por su
                         hijo y así aumente su autoestima antes de que vaya a la universidad.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> Gene Stupnitsky</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2023</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Romance </p>
                 </div>
             </article>
 
@@ -208,12 +249,15 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Miércoles</h2>
+                    <h2 class="text-3xl font-semibold mb-2">Miércoles<a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                        <i class="fa-solid fa-star"></i>
+                    </a></h2>
                     <p class="customDark mb-4">Mientras asiste a la Academia Nevermore, Miércoles Addams intenta dominar
                         su incipiente habilidad psíquica, frustrar una ola de asesinatos y resolver el misterio que
                         envolvió a sus padres 25 años atrás.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> Miles Millar, Alfred Gough</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2022</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Misterio </p>
                 </div>
             </article>
 
@@ -223,7 +267,11 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Peaky blinders</h2>
+                    <h2 class="text-3xl font-semibold mb-2">Peaky blinders
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">Birmingham, 1939. Thomas Shelby es el violento líder de una conocida
                         banda; un jefe del crimen organizado dispuesto a llegar a lo más alto sin importar el
                         precio.Mientras asiste a la Academia Nevermore, Miércoles Addams intenta dominar
@@ -232,6 +280,7 @@
                     <p class="customDark mb-1"><strong>Director:</strong> Otto Bathurst, Tom Harper, Colm McCarthy, Tim
                         Mielants, David Caffrey, Anthony Byrne</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2022</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Acción </p>
                 </div>
             </article>
 
@@ -240,12 +289,17 @@
                     <img src="../img/series/lqsa.png" alt="Imagen de peaky" class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">La que se avecina</h2>
+                    <h2 class="text-3xl font-semibold mb-2">La que se avecina
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">La convivencia se ve alterada por la llegada de una nueva vecina al
                         edificio, una anciana bastante problemática. Además, Maite sale de la cárcel, Amador, por su
                         parte, decide volver a la civilización y Enrique se esta adaptando a la soltería.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> Alberto Caballero</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2007</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Comedia </p>
                 </div>
             </article>
 
@@ -254,12 +308,17 @@
                     <img src="../img/series/you.png" alt="Imagen de you" class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">You</h2>
+                    <h2 class="text-3xl font-semibold mb-2">You
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">Un joven peligrosamente encantador y extremadamente obsesivo recurre a
                         métodos poco ortodoxos para introducirse en las vidas de las personas que lo fascinan.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> Jennifer Lence, Jason Sokoloff, Wayne Carmona
                     </p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2018</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Suspense </p>
                 </div>
             </article>
 
@@ -269,13 +328,18 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Cristo y Rey</h2>
+                    <h2 class="text-3xl font-semibold mb-2">Cristo y Rey
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">Cuando Ángel Cristo y Bárbara Rey se unen, su matrimonio pronto se
                         convierte en un negocio millonario, pero detrás de los focos se esconden problemas de
                         drogadicción, juego e infidelidades.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> David Molina Encinas; Manu Gómez
                     </p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2023</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Drama </p>
                 </div>
             </article>
 
@@ -285,12 +349,17 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Cristo y Rey</h2>
+                    <h2 class="text-3xl font-semibold mb-2">The bear
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">Mientras Carmy lucha por transformar la tienda familiar de bocadillos y a
                         sí mismo, trabaja junto a un equipo de rudos que al final se revela como su familia elegida.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> Tyson Bidner
                     </p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2022</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Comedia </p>
                 </div>
             </article>
 
@@ -300,7 +369,11 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">The Gilmore girls</h2>
+                    <h2 class="text-3xl font-semibold mb-2">The Gilmore girls
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">
                         Las chicas Gilmore es una serie de televisión de comedia y drama que se emitió en los Estados
                         Unidos desde el 5 de octubre de 2000, y posteriormente en otros países del mundo. Creada por Amy
@@ -310,6 +383,7 @@
                         Chris Long
                     </p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2007</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Comedia </p>
                 </div>
             </article>
 
@@ -319,7 +393,11 @@
                         class="w-full h-60 object-cover rounded-lg">
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
-                    <h2 class="text-3xl font-semibold mb-2">Sex education</h2>
+                    <h2 class="text-3xl font-semibold mb-2">Sex education
+                        <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
+                            <i class="fa-solid fa-star"></i>
+                        </a>
+                    </h2>
                     <p class="customDark mb-4">
                         Como el tímido Otis tiene todas las respuestas para dudas sobre sexo porque su madre es
                         sexóloga, su compañera Maeve le propone montar una consulta en el instituto.</p>
@@ -327,6 +405,7 @@
                         Campbell, Clara Couchman
                     </p>
                     <p class="customDark mb-1"><strong>Año:</strong> 2019</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Comedia </p>
                 </div>
             </article>
         </section>
