--- a/html/favoritos.html
+++ b/html/favoritos.html
@@ -56,8 +56,9 @@
                 <!-- Formulario de búsqueda -->
                 <form action="#" method="get" class="flex items-center space-x-2">
                     <input type="text" name="query" placeholder="Buscar..."
-                        class="px-1/2 py-1 rounded-lg focus:outline-none focus:ring focus:border-customLightBlue lg:mb-0 text-sm">
-                    <button type="submit"
+                        class="px-1/2 py-1 rounded-lg focus:outline-none focus:ring focus:border-customLightBlue lg:mb-0 text-sm"
+                        title="Película por defecto: Frozen">
+                    <button type="submit" formaction="detalles.html#frozen"
                         class="bg-customLightBlue hover:bg-customBlue text-customWhite px-2 py-1 mr-2 rounded-lg">Buscar</button>
                 </form>
 
@@ -85,8 +86,14 @@
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
                     <h2 class="text-3xl font-semibold mb-2">Titanic</h2>
+                    <p class="customDark mb-4">Jack es un joven artista que gana un pasaje para viajar a América en el
+                        Titanic, el transatlántico más grande y seguro jamás construido. A bordo del buque conoce a
+                        Rose, una chica de clase alta que viaja con su madre y su prometido Cal, un millonario engreído
+                        a quien solo interesa el prestigio de la familia de su prometida. Jack y Rose se enamoran.
+                        Mientras, el lujoso transatlántico se acerca a un inmenso iceberg.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> James Cameron</p>
                     <p class="customDark mb-1"><strong>Año:</strong> 1997</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Drama </p>
                 </div>
             </article>
 
@@ -98,9 +105,12 @@
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
                     <h2 class="text-3xl font-semibold mb-2">Avatar</h2>
-
-                    <p class="customDark mb-1"><strong>Director:</strong> Nombre del Director</p>
-                    <p class="customDark mb-1"><strong>Año:</strong> 2023</p>
+                    <p class="customDark mb-4">Entramos en el mundo Avatar de la mano de Jake Sully, un ex-Marine en
+                        silla de ruedas, que ha sido reclutado para viajar a Pandora, donde existe un mineral raro y muy
+                        preciado que puede solucionar la crisis energética existente en la Tierra.</p>
+                    <p class="customDark mb-1"><strong>Director:</strong> James Cameron</p>
+                    <p class="customDark mb-1"><strong>Año:</strong> 2009</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Animación </p>
                 </div>
             </article>
 
@@ -113,8 +123,12 @@
                 </div>
                 <div class="md:pl-4 mt-4 md:mt-0 md:w-2/3">
                     <h2 class="text-3xl font-semibold mb-2">Miércoles</h2>
+                    <p class="customDark mb-4">Mientras asiste a la Academia Nevermore, Miércoles Addams intenta dominar
+                        su incipiente habilidad psíquica, frustrar una ola de asesinatos y resolver el misterio que
+                        envolvió a sus padres 25 años atrás.</p>
                     <p class="customDark mb-1"><strong>Director:</strong> Miles Millar, Alfred Gough</p>
-                    <p class="customDark mb-1"><strong>Año:</strong> 2023</p>
+                    <p class="customDark mb-1"><strong>Año:</strong> 2022</p>
+                    <p class="customDark mb-1"><strong>Género:</strong> Misterio </p>
                 </div>
             </article>
         </section>
