--- a/html/peliculas.html
+++ b/html/peliculas.html
@@ -56,8 +56,8 @@
                 <!-- Formulario de búsqueda -->
                 <form action="#" method="get" class="flex items-center space-x-2">
                     <input type="text" name="query" placeholder="Buscar..."
-                        class="px-1/2 py-1 rounded-lg focus:outline-none focus:ring focus:border-customLightBlue lg:mb-0 text-sm">
-                    <button type="submit"
+                        class="px-1/2 py-1 rounded-lg focus:outline-none focus:ring focus:border-customLightBlue lg:mb-0 text-sm" title="Película por defecto: Frozen">
+                    <button type="submit" formaction="detalles.html#frozen"
                         class="bg-customLightBlue hover:bg-customBlue text-customWhite px-2 py-1 mr-2 rounded-lg">Buscar</button>
                 </form>
 
